--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.3",
     "moment-timezone": "^0.5.44",
+    "moti": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.6.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
