--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bundle-android": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release/ && rm -rf 'android/app/src/main/res/drawable-*' && rm -rf 'android/app/src/main/res/raw/*' && cd android && ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
