--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.6.1",
     "react-native-responsive-dimensions": "^3.1.1",
